img tag is by default 'display: inline', which cause the spacing under the img, setting as 'display:block' would solve the spacing issue

--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,11 @@ body {
     font-weight: 300;
 }
 
+img {
+    width: 100%;
+    display: block;
+}
+
 /* typography */
 
 h1, h2, h3 {
